--- a/css/main.css
+++ b/css/main.css
@@ -1,9 +1,163 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+@import url("https://fonts.googleapis.com/css2?family=Lexend:wght@100..900&display=swap");
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Lexend", sans-serif;
 }
-.container{
-    width: 1200px;
-    margin: 0 auto;
+.container {
+  width: 1200px;
+  margin: 0 auto;
+}
+nav .container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+header {
+  background-color: #ffefe6;
+}
+nav {
+  padding-top: 40px;
+  padding-bottom: 40px;
+}
+nav .container ul {
+  display: flex;
+  list-style: none;
+  gap: 36px;
+}
+nav .container ul li {
+  font-weight: 500;
+  font-size: 20px;
+  color: #939393;
+}
+nav .container ul li:hover {
+  transition: all 0.3s ease-in-out;
+  color: #2a2a2a;
+  cursor: pointer;
+}
+.header-search {
+  display: flex;
+  gap: 16px;
+}
+.hero .container{
+    position: relative;
+}
+.hero-wrapper {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-bottom: 132px;
+}
+.hero-left h1 {
+  font-weight: 800;
+  font-size: 48px;
+  padding-bottom: 27px;
+}
+span {
+  color: #ff6000;
+}
+.buttons {
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+  gap: 40px;
+}
+.button {
+  padding: 10px 86px;
+  border: 1px solid #ff6000;
+  border-radius: 50px;
+  color: #ff6000;
+  background-color: transparent;
+}
+.button:hover {
+  transition: all 0.3s ease-in-out;
+  background-color: #ff6000;
+  color: #ffffff;
+  cursor: pointer;
+}
+.hero-bottom {
+    position: absolute;
+    margin: -100px auto 0 auto;
+  background-color: #ffffff;
+  padding: 36px 24px;
+  border-radius: 24px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  box-shadow: 0px 4px 4px 0px #00000040;
+
+}
+.delivery {
+  display: flex;
+  align-items: center;
+  gap: 21px;
+}
+.delivery-info h2 {
+  font-weight: 700;
+  font-size: 32px;
+  line-height: 20px;
+  padding-bottom: 24px;
+}
+.delivery-info p {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 20px;
+  color: #939393;
+}
+
+main{
+    margin-top: 200px;
+}
+.section-one .container h2 {
+  font-weight: 700;
+  font-size: 48px;
+}
+.section-one .container p {
+  font-weight: 400;
+  color:#B3B3B3;
+  font-size: 20px;
+}
+.section-one .container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.section-two .container{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.section-two .container .box{
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
+    align-items: center;
+    text-align: center;
+}
+.section-two .container .box button{
+    border: none;
+    background-color: transparent;
+
+font-weight: 500;
+font-size: 24px;
+
+text-align: center;
+color:#FF6000;
+}
+
+.section-three{
+    background-color:#FFEFE6;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 55px;
+    margin-bottom: 20px;
+    padding: 20px 0;
+}
+.section-three h3{
+    font-family: Lexend;
+font-weight: 500;
+font-size: 32px;
+
 }
